fixed overflowing bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 a:hover {
   opacity: 70%;
   transition-property: all;
